# Multi-Agent-Clinical-Intelligence-Assistant

./: Dockerfile  LICENSE  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/synthetic/: knowledge.json
docs/: architecture.md
src/life_sciences_chatbot/: __init__.py  api.py  llm.py  models.py  retrieval.py  routing.py  schemas.py  service.py
tests/: test_routing.py  test_service.py
