[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-sciences-multi-agent-chatbot"
version = "1.0.0"
description = "Retrieval-grounded life sciences multi-agent portfolio chatbot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Meghana Pentyala" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "pydantic>=2.8,<3", "openai>=1.68,<3"]
dev = ["ruff>=0.9,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
